compiler/tests/fail/x86-64/zxspill.jazz
export
fn zxspill(reg u8 x) -> reg u64 {
  stack u64 s;
  reg u64 r;
  s = (64u) x;
  r = s;
  return r;
}
